@@ -1,5 +1,6 @@
 AUX rules_CFLAGS-13.0.patch 433 SHA256 f50e63e17cab1d0efe52c5ff55841cdb4bd8563b0f595b4a3e45a038c591b76c SHA512 8528101f7d71369a8eeed775753963f58f3321f91e0a60d14d8b6fd6443616d2f20bab9d83dfc6d725fd0aec23c33ec11be35c4a2a3124240e1ab650dbd83bfd WHIRLPOOL 6a02a55a023fd59ba80ded8ec69e212965eebeed7374ec6194abe4dfd80269546de1da123662bdf051001f435fa304ec3baea2fae8beae833ab4fc668ca37db1
 AUX rules_CFLAGS-14.0.patch 414 SHA256 09f0889f71c7167ede6ce09f6a80d79a951baddcd0b0afe497beac010e30f99e SHA512 5ec4f6fe404f51781be8702cafdda36c99c0f22ddaceaaba9b8ba2f44b5c6d97ea1772061d73d76a205b9375d177dafe8ad46acb557751186d8a00aec9b7fa8c WHIRLPOOL 5728a524c8fab2bd7024d5eaa838e66dca97c247174eaad695e6d9f15946c4ace6c0078cfbe661e02fe0a23aeee304b98b16c79c53415272170bb73417b2cc84
+AUX rules_CFLAGS-15.0.patch 433 SHA256 910c3b9cb8ae4296ea324fbdc0434a92c4dda7183e45b658efdc9dee7c7afe75 SHA512 b6208004018447d0e828fce1fe5f21b1ad2bb8b2aa38b01231863e77ca62e97ce73e1f89b0f9030127920a242374493e7052a6331683d70e2422a8fe2403b5f6 WHIRLPOOL e31ad5f930f4fb27aa5f797f2fa8fe137f5c7f2bdd6c4794954bd036ba9386c12b514bcc438e7be5276d0b0b42d20c8e0305b9ca45953c8e768267dbb9ddc695
 AUX ti99-install3-12.1.patch 369 SHA256 cbafc6530cdf8bf2913ec72cf6521d168d36267c30d4105c33cca61d73110e1b SHA512 dae90a49e14ca9256f0ea1fedf19cbe4ad8b6d0a5b517060a2ca06931921715e08a1507f0c8605f561dbef150881a8bbcb737da3b9785c898961dda3ad321c9d WHIRLPOOL f11623fb145a2a6670494fc353e0a1d715b4fbb5bbdaccddf72378adfa5416b8f92c4755833c50db1cbc7588807a26179cab1dd575b74c66cae3cf95444f7cb0
 DIST TIMRaD2.zip 1495522 SHA256 bf01737f996a335f4be84d2b170d2e16704b8242bd8447c5b6debb5b4f959b55 SHA512 bbe6f533f1947cca7ae73105aba6934936ad63a831b3621c6f9e2bf1d21dc60f366fdac934de28ebbe51ef173f00c936be555bbdfdb8aa90bbec5974652851b4 WHIRLPOOL ce496a9f52e378e5fe74a812e71b63cf2c3b08c8da58bda7ad837528ebb3b32e3a4e143e54e417715d2a43a3ee723812cc70e44c7db8a81293f468823ea866b8
 DIST mess_modules.zip 5312882 SHA256 82fdc1516566be537557e08c67ff0057eacdbd520c8fd6753c9a5b84c9b41d32 SHA512 19c3169030c746c7275d4a00416b2d1f8a34a8e13d0999ff29f54ecb2700f60abb7e38dba5c6662f318a91c7be6f56e1b522bdcb496adf21a226cabfb9683bc9 WHIRLPOOL a696bb980ecdb82d44abfcf4038efb0214b5634dd04ccb91823129bd9d7b0978278b3d626e81aaf476917e767e62e047f9182ff3dd202b37c2d71e4080ead448
@@ -7,7 +8,9 @@ DIST mg_gramkracker.zip 6335 SHA256 90c38d0cd1097f4fc088ac2d549f19a8a1b7b0ca8b36
 DIST ti99_complete.zip 453436 SHA256 5ff0ffa536ea6e19c49f364aef61cf5e05054b373cd3a933b2bcf51cc35bac80 SHA512 79773117a6645c8fa5f27f1d139be15c732f3d14a8a640be84ae0f9a2468db062a33d59af3b2488e1749cc462d5f4415775e84fec72b677ee48da0cfc3ea896c WHIRLPOOL b6e4dc7b29f616a7b6d357bd6b316bfbdc8cc714319732c58123ac17b8e3aeb39e55c36c6fb1af33dda129e760e0e8450f6a3d43baa5279c4e49e27d5fd35ebb
 DIST ti99sim-0.13.0.src.tar.gz 1169967 SHA256 527d92bb17670bcf3080a601881fdd0cfafd158275832c7606de44ef5454bff3 SHA512 3e9261b22a8f536f53d055b723ce8b271e7d6e36b1ba6cc867c816eae1eb3b7ffc9a5111c9044b501ab14db9e0a97237ca45c7ad48b9841f49acd85f747f6655 WHIRLPOOL 31c345083ec704da5dc9ef2fb36f59f4a5621f0270b64a39a8a739c4f518cd88535d82808188df9ae91a1e292ceb2469ca2640927128e31c96c2f5e11575f1c6
 DIST ti99sim-0.14.0.src.tar.xz 188368 SHA256 07e60cb74fe81bed54114a999e09face2efe96454d3c6a713027532131ef0d86 SHA512 48a210c181269f338425bdf38ecbb71d53bd169340ad455bfa03320b0ab33f696f8e53da00b3b99ddf04c18c0b4ff115ffbb63c6e56515398a4b7f26f9205ecd WHIRLPOOL 56c273d2074fd3f2922a3bb9a0c24e6ef7024fb24ad9e2319d06f0dfdd162d786f13ae736608d67602a1a26e82cd948106e077b6efcf493f71663c01710f8ded
+DIST ti99sim-0.15.0.src.tar.xz 200368 SHA256 deb74cf88956434ea3058f80bddb3eb3674d9773155f6d5aa1533feebb8ba88e SHA512 b6d387e3c5f380a4cb26109089a3c17ec6062f662cea2ecf568e32138c750b1e256d0449c4461fa664561f8367ebcce5b5c5613f74eacdb37b35e3bdf3c03eb4 WHIRLPOOL 81e811792fdbbd7247670b61a7cb75d633457e46693da5f0be24e247bb9dd842f79885e1f131ddd0239dd4aedd35edd93743400d5952e277549ce95ed2e6adbe
 EBUILD ti99sim-0.13.0.ebuild 2110 SHA256 cad8081ebb6c0a46e6e90254486242a1b761ef63436e9b53a78a81864508e17b SHA512 c0114da3cb97b3b89be24f49a0fd7ade2e8b4a9922edabe4cd85cb61ca3a7b01b13db0700a0f3b73fc00368f21c761c37c046d7bdd9eecd32ed442b4ac7eab9a WHIRLPOOL f55f35b386b996a9bf5ee16aadf30afb0e22f2a08139d521e8dafe69531abbae4b9c8fda77fa355b8b4046264452374c245687d0ddef9ddca6faef52940d4426
 EBUILD ti99sim-0.14.0.ebuild 2382 SHA256 2aacca699d2040ef5bf3d03ea709e4c4898560a165868d133b4461b266660451 SHA512 93c684c7de4a539a79bec407141427b4058833ead95ca107faaf7873be36408e560ecd0a9f97fdba2f8d615d687afa0f8ad1e1030b4edbc226897c14aaa76963 WHIRLPOOL 5ab3e94999d7f5dfa7cf93a7b52ddc47ce8d32c89e5bc895e32db51630ff171a2149f0b41f2b6a8925e8f79b0a20fd663134e308bb2b34ba92f9b43fc351a3ae
-MISC ChangeLog 1008 SHA256 b056dbf88a502d55442fa0fafc0f2a66100e6c1c8e7657b06d9765befb75e966 SHA512 2f8cea53c850f8da6475dd2ce6a27b4a4b6a9cce700aa035b734d65ed78f4561daa4d9eaae6c856baac068e92cadffc82a1b483396e6275ebf3948e32debe8c3 WHIRLPOOL e8ff67e9ec1f7a7f4d306840b191d0802f43c28914eaaeaac6e99143cffe849ff1e1e5c866a2386079d39b8016fc9b4435ecbd0e6a67707a6d8a8cd28beadd91
+EBUILD ti99sim-0.15.0.ebuild 2532 SHA256 f761e29f8ac30242bc3051d4fe06fd4ccb1b7dee94b42cc687b2c1febc415923 SHA512 40efdb38b07aaca347ecd4cad6295e76a9b3519cb854c03c8551e06cf2eb71d2d31e2814b26895416ab06d051b0a7eed6ba08834dfcb516f90a00e5967175bf0 WHIRLPOOL 8f63933aa761a1fc430f05c92c5a604a4ec758c89bf7ab25776af1f8ad62018ec9eec432cf78a97b4fc933199d40e8d1f262fe5f1dd6c04b1bc5964e860c1afa
+MISC ChangeLog 1154 SHA256 2643647537a816cc3a9fbb6e21f8d0ab0bbd679d1969781280d9fc779b15e303 SHA512 0585340157cc5328d1c85c6d9ec8e2b1b03ee30915c5651dda76568fa0f92e8ec497f6944aa4d9a6cc836a49562097d29ce4dc3c759522466c811dfe2cd448f8 WHIRLPOOL cdd6828ee6c0fe02a9915b8fc558974cf5854d5f1069fbbb68289f26900288be97a9adcdc2307e2f9ecdc649d6c5808a7823c9abcef7727cafa2d6332efb56c3
 MISC metadata.xml 796 SHA256 16801e56ed086a6a543ee8653420d012e7f86cea1fdb0fe6a58ab0e1ec04293e SHA512 8fcc6a1735811bcee65cb63c7e75d55fb7f87a1e85ce9d5fb6e5ce9fef623b577a7a60942541a07d0ce1cd5b290800a6fa0b506f6debb2259de1a4da89407929 WHIRLPOOL 3a389e44be4626018da46de35c8fece15784d3ea90418c2259ccb75de3d1a8edaae7c49a4cd1504b50a9b0b2ce6b682c146b87987d5287c3d8693194f155422e
